--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ottt.loader.js";
+      var loaderUrl = buildUrl + "/AlphaVersion.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ottt.data",
-        frameworkUrl: buildUrl + "/ottt.framework.js",
-        codeUrl: buildUrl + "/ottt.wasm",
+        dataUrl: buildUrl + "/AlphaVersion.data",
+        frameworkUrl: buildUrl + "/AlphaVersion.framework.js",
+        codeUrl: buildUrl + "/AlphaVersion.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Alpha",
